// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelText matches noError snapshot: no error mount 1`] = `
.emotion-0 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
}

@media only screen and (min-width:641px) {
  .emotion-0 {
    font-size: 19px;
    line-height: 1.3;
  }
}

<Styled(LabelText)>
  <LabelText
    className="emotion-1"
  >
    <Styled(span)
      className="emotion-1"
    >
      <span
        className="emotion-0"
      >
        example
      </span>
    </Styled(span)>
  </LabelText>
</Styled(LabelText)>
`;

exports[`LabelText matches wrapper snapshot: wrapper mount 1`] = `
.emotion-0 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
  font-weight: 700;
}

@media only screen and (min-width:641px) {
  .emotion-0 {
    font-size: 19px;
    line-height: 1.3;
  }
}

<Styled(LabelText)
  error="example"
>
  <LabelText
    className="emotion-1"
    error="example"
  >
    <Styled(span)
      className="emotion-1"
      error="example"
    >
      <span
        className="emotion-0"
      >
        example
      </span>
    </Styled(span)>
  </LabelText>
</Styled(LabelText)>
`;
